--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,261 @@
 .transition-height {
   transition: all 3s ease-in-out;
 }
+
+/* ---------- Contact ---------- */
+.contact-section {
+  background-color: #e3fafc;
+}
+.contact-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 160px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 130px;
+}
+
+.contact-content {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  background-color: white;
+  margin-top: 60px;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 1px 2px 12px #f9f9f9;
+  border: 6px solid #f3f0ff;
+}
+
+.contact-img-container {
+  width: 400px;
+  background-image: url("src/img/send-message-3.avif");
+  background-repeat: none;
+  background-position: center;
+  background-size: cover;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  height: 100%;
+  background-color: #f3f0ff;
+  font-family: Nunito Sans, Montserrat, Arial;
+  font-size: 14px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.contact-elements {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+  padding: 20px;
+  width: 90%;
+  height: 100%;
+}
+
+.contact-form label {
+  color: #868e96;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  font-weight: 700;
+}
+
+.contact-form input {
+  font-size: 14px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+}
+
+.contact-form input:focus {
+  outline: 2px solid #b197fc;
+}
+
+.contact-form textarea {
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  font-family: Nunito Sans, Montserrat, Arial;
+}
+
+.contact-form textarea:focus {
+  outline: 2px solid #b197fc;
+}
+
+.name-elements {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5%;
+  width: 100%;
+}
+
+#first-name {
+  width: 93%;
+}
+
+#last-name {
+  width: 93%;
+}
+
+.contact-element-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3px;
+  width: 100%;
+}
+
+.contact-element-wrapper input {
+  width: 97%;
+}
+
+#message {
+  width: 97%;
+}
+
+#contact-submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  gap: 10px;
+  padding: 10px 40px;
+  cursor: pointer;
+  background-color: #b197fc;
+  border-radius: 5px;
+  color: white;
+  font-weight: bolder;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+#contact-submit-btn:hover {
+  background-color: #9775fa;
+  transform: scale(1.01);
+}
+
+#send-icon {
+  font-size: 16px;
+}
+
+@media screen and (max-width: 1120px) {
+  .contact-content {
+    flex-direction: column;
+  }
+  .contact-container {
+    padding: 0px;
+    padding-top: 140px;
+    padding-bottom: 80px;
+  }
+  .contact-img-container {
+    height: 350px;
+    width: 100%;
+    background-image: url("src/img/send-message-3.avif");
+    background-repeat: no-repeat;
+    background-position-y: -380px;
+    background-position-x: center;
+    background-size: cover;
+  }
+  .contact-img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .contact-container {
+    padding-top: 80px;
+  }
+  .contact-content {
+    padding: 40px;
+    width: 100%;
+  }
+  .contact-img-container {
+    height: 300px;
+    background-position-y: -500px;
+  }
+  .contact-form {
+    padding: 50px;
+    width: 100%;
+  }
+  .contact-elements {
+    padding: 0px;
+  }
+  #contact-submit-btn {
+    padding: 12px 30px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .contact-container {
+    padding-top: 0px;
+  }
+  .contact-img-container {
+    background-position-y: -400px;
+  }
+  .name-elements {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .contact-form {
+    padding: 40px;
+  }
+  #first-name {
+    width: 100%;
+  }
+  #last-name {
+    width: 100%;
+  }
+  .contact-form input {
+    width: 100%;
+  }
+  #message {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contact-img-container {
+    background-position-y: -350px;
+  }
+  .contact-content {
+    padding: 0px;
+  }
+  .contact-form {
+    padding: 30px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contact-img-container {
+    background-position-y: -270px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .contact-img-container {
+    background-position-y: -200px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .contact-img-container {
+    background-position-y: -150px;
+  }
+  .contact-form {
+    padding-bottom: 120px;
+  }
+}
