--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,8 @@
   background-color: rgb(239, 239, 239); /* Change to your desired track color */
   width: 12px;
 }
+
+/* Menu and Ordering Cursor */
+.zoom-in-cursor {
+  cursor: zoom-in;
+}
