--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #66d9e8; /* Change to your desired thumb color */
+  background-color: #ced4da; /* Change to your desired thumb color */
   border-radius: 10px;
 }
 
