--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@
   width: 600px;
   height: 100%;
   background-color: #fff0f6;
-  font-family: Nunito Sans, Montserrat, Arial;
+  font-family: "Raleway", Nunito Sans, Montserrat, Arial;
   font-size: 14px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -133,6 +133,7 @@
   font-size: 14px;
   letter-spacing: 1.5px;
   font-weight: 700;
+  font-family: "Raleway", Nunito Sans, Montserrat, Arial;
 }
 
 .contact-form input {
@@ -151,7 +152,7 @@
   border: none;
   border-radius: 4px;
   font-size: 14px;
-  font-family: Nunito Sans, Montserrat, Arial;
+  font-family: "Raleway", Nunito Sans, Montserrat, Arial;
 }
 
 .contact-form textarea:focus {
